objects/DL_VC__Value_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>DL_VC__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Value Trackers</relationshipLabel>
        <relationshipName>Value_Trackers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DL_VC__Achieved_Benefits__c</fullName>
        <label>Achieved Benefits</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Achieved_Payback__c</fullName>
        <label>Achieved Payback</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Achieved_ROI__c</fullName>
        <label>Achieved ROI</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Business_Case__c</fullName>
        <label>Business Case</label>
        <referenceTo>DL_VC__Business_Case__c</referenceTo>
        <relationshipLabel>Value Trackers</relationshipLabel>
        <relationshipName>Value_Trackers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DL_VC__Current_Benefits__c</fullName>
        <label>Current Benefits</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Current_Payback__c</fullName>
        <label>Current Payback</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Expected_Benefits__c</fullName>
        <label>Expected Benefits</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Expected_Costs__c</fullName>
        <label>Expected Costs</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Expected_Payback__c</fullName>
        <label>Expected Payback</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Expected_ROI__c</fullName>
        <label>Expected ROI</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Original_Value_Prop_Id__c</fullName>
        <label>Original Value Prop Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Value_Prop_Id__c</fullName>
        <externalId>true</externalId>
        <label>Value Prop Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Value Tracker</label>
    <nameField>
        <label>Value Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>